CEP performance (memory) tweaks